# cloud-scanner

./: .gitignore  README.md  install.sh
appliance-backend/scanner-engine/prowler-engine/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
appliance-backend/scanner-engine/prowler-engine/prowler_engine/: __init__.py  result_normalizer.py  rule_loader.py  scan_queue.py
appliance-backend/scanner-engine/prowler-engine/tests/: test_compatibility.py  test_compliance_parser.py
appliance-backend/scanner-engine/shield-engine/: CONFIGURATION.md  Dockerfile  pyproject.toml  requirements.txt
appliance-backend/scanner-engine/shield-engine/prowler_engine/: compatibility.py  compliance_parser.py  context.py  executor.py  metrics.py  server.py  settings.py
appliance-backend/scanner-engine/shield-engine/scanner/: __init__.py  base_scanner.py  compute_scanner.py  container_scanner.py  exposure_graph.py  iam_rules.py  iam_scanner.py  monitoring_scanner.py  network_rules.py  network_scanner.py  orchestrator.py  org_scanner.py  privilege_escalation_analyzer.py  rule_engine.py  serverless_scanner.py  storage_scanner.py
appliance-backend/scanner-engine/shield-engine/shield_engine/: __init__.py  aws_utils.py  example_run.py  rule_runner.py  types.py
appliance-backend/scanner-engine/shield-engine/shield_engine/rules/: __init__.py
appliance-backend/scanner-engine/shield-engine/shield_engine/rules/ec2/: __init__.py  backup_policy_disabled.py  (+3 more)
appliance-backend/scanner-engine/shield-engine/tests/: test_executor_pipeline.py  test_result_normalizer.py  test_rule_loader.py
(+586 files in other folders)
