[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shield-engine"
version = "1.0.0"
description = "Shield rule execution engine wrapper - runs upstream rules via direct Python import (no CLI)"
requires-python = ">=3.10"
dependencies = [
    "prowler>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "boto3>=1.34.0",
]

[project.scripts]
shield-engine = "prowler_engine.server:main"
